<resources>
    <string name="app_name">MetroGnome</string>
    <string name="mainTitle">MetroGnome</string>
    <string name="playButton">Play</string>
    <string name="stopButton">Stop</string>
    <string name="pauseButton">Pause</string>
    <string name="song_volume">Song volume</string>
    <string name="upload_file">Upload file</string>
    <string name="play_and_pause_button">Play and Pause Button</string>
    <string name="MetroGnome">MetroGnome</string>
    <string name="stop_button">Stop Button</string>
    <string name="app_description">The ability to seamlessly generate a metronome click track for any song - right at your fingertips!</string>
    <string name="upload_instructions">Start by uploading a song of your choice in the supported formats of <i>.mp3</i> or <i>.wav</i></string>
    <string name="please_wait">Please wait while your file is processed by our team of gnomes</string>
    <string name="click_frequency">Frequency (Hz) :</string>
    <string name="click_duration">Duration (sec) :</string>
    <string name="click_settings">Click settings:</string>
    <string name="new_upload_button">Upload another file</string>
    <string name="save_file">Save click track</string>

    <string-array name="frequencies">
        <item>900 Hz</item>
        <item>1000 Hz</item>
        <item>1100 Hz</item>
        <item>1200 Hz</item>
    </string-array>

    <string-array name="durations">
        <item>0.25 seconds</item>
        <item>0.5 seconds</item>
        <item>0.75 seconds</item>
        <item>1.0 seconds</item>
    </string-array>
</resources>