<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white"
    >

    <ImageView
        android:id="@+id/ivTitle"
        android:layout_width="246dp"
        android:layout_height="108dp"
        android:layout_marginTop="24dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/MetroGnome"
        android:src="@drawable/group_3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/ivGnome"
        android:contentDescription="@string/MetroGnome"
        android:layout_width="85dp"
        android:layout_height="90dp"
        android:layout_marginTop="34dp"
        android:src="@drawable/gnome"
        app:layout_constraintHorizontal_bias="0.699"
        app:layout_constraintLeft_toLeftOf="@id/ivTitle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <SeekBar
        android:id="@+id/seekBarTime"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="125dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivTitle"
        />


    <TextView
        android:id="@+id/tvCurrTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seekBarTime"
        tools:text="0:47"
        />

    <TextView
        android:id="@+id/tvTotalTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="48dp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/seekBarTime"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="0:42"
        />

    <ImageButton
        android:src="@drawable/play_button"
        android:layout_marginTop="10dp"
        android:id="@+id/btnPlay"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:scaleType="fitCenter"
        android:background="@android:color/transparent"
        android:foreground="?selectableItemBackground"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btnStop"
        app:layout_constraintTop_toBottomOf="@id/tvCurrTime"
        android:contentDescription="@string/play_and_pause_button" />

    <ImageButton
        android:id="@+id/btnStop"
        android:src="@drawable/stop_button"
        android:layout_marginTop="10dp"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:scaleType="fitCenter"
        android:background="@android:color/transparent"
        android:foreground="?selectableItemBackground"
        android:text="@string/stopButton"
        app:layout_constraintLeft_toRightOf="@id/btnPlay"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTotalTime"
        android:contentDescription="@string/stop_button"/>


    <Button
        android:id="@+id/btnSaveFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnPlay"
        app:layout_constraintBottom_toTopOf="@id/btnUploadAgain"
        android:layout_marginTop="45dp"
        android:text="@string/save_file"
        />

    <Button
        android:id="@+id/btnUploadAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSaveFile"
        android:layout_marginTop="45dp"
        android:text="@string/new_upload_button"
        />




</androidx.constraintlayout.widget.ConstraintLayout>